<resources>
    <string name="app_name">Student Registration Portal</string>
    <string name="no_attendance_records">No attendance records found</string>
    <string name="no_courses_available">No courses available</string>
    <string name="register">Register</string>
    <string name="no_announcements">No announcements</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="registration_number">Registration Number</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="gpa">GPA</string>
    <string name="cgpa">CGPA</string>
    <string name="credits">Credits</string>
    <string name="profile_image">Profile Image</string>
    <string name="full_name">Full Name</string>
    <string name="course">Course</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="save_profile">Save Profile</string>
    <string name="student_registration">Student Registration</string>
    <string name="already_have_account_login">Already have an account? Login</string>
    <string name="announcements">Announcements</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password_q">Forgot Password?</string>
    <string name="new_user_register">New User? Register Here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="student_portal">Student Portal</string>
    <string name="no_timetable_found">No timetable found</string>
    <string name="splash_tagline">Your Campus, Your Portal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>